--- a/manifest.json
+++ b/manifest.json
@@ -339,17 +339,6 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/images/env-tab.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/images/env-tab.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
       "source_relative_path": "home/images/env-template-list.png",
       "output": {
         "resource": {
@@ -376,6 +365,17 @@
       "output": {
         "resource": {
           "relative_path": "home/images/env-template.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/images/env_tab.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/env_tab.png"
         }
       },
       "is_incremental": false,
@@ -603,6 +603,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/images/user_ssh_key.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/user_ssh_key.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/images/users-tab.png",
       "output": {
         "resource": {
@@ -672,12 +683,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/manage-environments.md",
       "output": {
         ".html": {
           "relative_path": "home/manage-environments.html",
-          "hash": "/+yzquh8tNyqYBlN3dIQ8g=="
+          "hash": "DTAmORk0OJmVTGVdHEJ/ng=="
         }
       },
       "is_incremental": false,
@@ -840,7 +854,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/access-fcm-ud-directories.html",
-          "hash": "JZWGlCl9pKQ5DiIMLQxZ8w=="
+          "hash": "sdmoZUzLiWQAybJ2Yyx9Sg=="
         }
       },
       "is_incremental": false,
@@ -852,7 +866,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/access-t24-ud-directories.html",
-          "hash": "J16SK01KyUdtYDhSJ0NAmg=="
+          "hash": "Dl/Ph7zpAOakFIIgh+AfJA=="
         }
       },
       "is_incremental": false,
@@ -864,7 +878,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/add-app-endpoint.html",
-          "hash": "TBeKtJVJkguJx4F5NTygIg=="
+          "hash": "zZaDFGL4JkYbRBmOGkWUtQ=="
         }
       },
       "is_incremental": false,
@@ -888,7 +902,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/clone-environment.html",
-          "hash": "EfEMMSrBxJK3gzCQF+SqDA=="
+          "hash": "eBzJg4/yXdRR8gelqubDuQ=="
         }
       },
       "is_incremental": false,
@@ -951,7 +965,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/deploy-an-update-to-an-existing-environment.html",
-          "hash": "BLjgAixaIXXLlmKRrJDizw=="
+          "hash": "35VsBmWaElYOea+xfXmY+w=="
         }
       },
       "is_incremental": false,
@@ -963,7 +977,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/environment-basic-operations.html",
-          "hash": "eccWt2o/Ptx5A9BEC0bngA=="
+          "hash": "Gcxvh4FN/gqFauYM6/ZaXQ=="
         }
       },
       "is_incremental": false,
@@ -993,7 +1007,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/export-import-database.html",
-          "hash": "/JQo1F7ba6Hw49nlGFcGjg=="
+          "hash": "R+OHegMH9/KPIdapGTvgpA=="
         }
       },
       "is_incremental": false,
@@ -1029,7 +1043,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/fcm-configuration.html",
-          "hash": "QlZONo9gCXkcH4qeTFQ7fg=="
+          "hash": "gtnQ2acJvqwy/EsvIzMDyQ=="
         }
       },
       "is_incremental": false,
@@ -5709,7 +5723,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/t24-development.html",
-          "hash": "pHsJOaiJbj4pkzLo6LRYRg=="
+          "hash": "YGJ6AM6VDdp2zle0405QLQ=="
         }
       },
       "is_incremental": false,
@@ -5856,7 +5870,7 @@
       "output": {
         ".html": {
           "relative_path": "home/user-creation-in-paas.html",
-          "hash": "ycTSuGqjYkrlo+0V1vjIew=="
+          "hash": "dr8VsDuUJgA4fJAiKF/WKQ=="
         }
       },
       "is_incremental": false,
@@ -5990,9 +6004,8 @@
           "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "TocDocumentProcessor": {
+        "ConceptualDocumentProcessor": {
           "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "RestApiDocumentProcessor": {
@@ -6000,8 +6013,9 @@
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "ConceptualDocumentProcessor": {
+        "TocDocumentProcessor": {
           "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ManagedReferenceDocumentProcessor": {
