--- a/manifest.json
+++ b/manifest.json
@@ -4791,6 +4791,61 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/selenium-automation-1.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/selenium-automation-1.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/selenium-automation-2.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/selenium-automation-2.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/selenium-automation-3.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/selenium-automation-3.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/selenium-automation-4.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/selenium-automation-4.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/selenium-automation-5.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/selenium-automation-5.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/selenium-automation-driver-executable.png",
       "output": {
         "resource": {
@@ -5745,15 +5800,12 @@
       "version": ""
     },
     {
-      "log_codes": [
-        "InvalidFileLink"
-      ],
       "type": "Conceptual",
-      "source_relative_path": "home/techguides/selenium-test-template.md",
+      "source_relative_path": "home/techguides/selenium-template.md",
       "output": {
         ".html": {
-          "relative_path": "home/techguides/selenium-test-template.html",
-          "hash": "rZ4sbjQ8aUSB7cbx+mrUtg=="
+          "relative_path": "home/techguides/selenium-template.html",
+          "hash": "Vb6bgroZCdSIlDDZOeJJFw=="
         }
       },
       "is_incremental": false,
@@ -6101,14 +6153,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "RestApiDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "RestApiDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
