--- a/manifest.json
+++ b/manifest.json
@@ -1019,7 +1019,19 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/factories.html",
-          "hash": "RuzsgIZ/HdEixky3j0Dd3g=="
+          "hash": "hJh3BJ61ZQYIbP8FyM75Jw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/techguides/factory-migration.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/factory-migration.html",
+          "hash": "4e1p7TaRt5RKNkr4RaAi9Q=="
         }
       },
       "is_incremental": false,
@@ -6099,7 +6111,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "vvkIE1Xff+NxG01RILdEzg=="
+          "hash": "wcV9CkpLroqIpOuLtdjxVg=="
         }
       },
       "is_incremental": false,
