--- a/manifest.json
+++ b/manifest.json
@@ -5934,12 +5934,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/selenium-template.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/selenium-template.html",
-          "hash": "UZ4miEnSbOyxl6awCLuDLg=="
+          "hash": "LVEvrAPGsdinrQEid18uyA=="
         }
       },
       "is_incremental": false,
