--- a/manifest.json
+++ b/manifest.json
@@ -914,7 +914,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/components-products.html",
-          "hash": "hRyPdqrEIaQ68oesqCuvKQ=="
+          "hash": "oaSFscqE+dv0KjnwPMVQYw=="
         }
       },
       "is_incremental": false,
@@ -1913,6 +1913,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/components-and-products-uploadurl.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/components-list.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/components-list.png"
         }
       },
       "is_incremental": false,
@@ -3266,6 +3277,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/fcm-live-folders.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/fcm-login.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/fcm-login.png"
         }
       },
       "is_incremental": false,
@@ -6296,18 +6318,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
-        "ManagedReferenceDocumentProcessor": {
-          "can_incremental": false,
-          "incrementalPhase": "build"
-        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "RestApiDocumentProcessor": {
@@ -6316,6 +6334,10 @@
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build"
+        },
+        "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build"
         }
